<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"

android:orientation="vertical"
android:padding="@dimen/_16sdp"
tools:context=".shared.ui.fragments.ForgotPasswordFragment">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_15sdp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_rotate" />

    <ImageView
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_centerInParent="true"
        android:paddingRight="@dimen/_15sdp"
        android:src="@drawable/ic_password" />


</RelativeLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/text_verifytoken_for_reset_password"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_13sdp" />

    <EditText
        android:id="@+id/edtEmailAddress"
        style="@style/edit_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_edit"
        android:editable="false"
        android:hint="@string/hint_email"
        android:imeOptions="actionDone"
        android:lines="1" />

    <EditText
        android:id="@+id/edtPass"
        style="@style/edit_txt_single_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtEmailAddress"
        android:layout_marginTop="@dimen/_5sdp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/_5sdp"
        android:paddingRight="@dimen/_5sdp"

        />

    <EditText
        android:id="@+id/edtConfirmPass"
        style="@style/edit_txt_single_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtPass"
        android:layout_marginTop="@dimen/_5sdp"
        android:hint="@string/confirm_pass"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/_5sdp"
        android:paddingRight="@dimen/_5sdp"

        />

    <EditText
        android:id="@+id/edtVerifyCode"
        style="@style/edit_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_edit"
        android:hint="@string/hint_verifycode"
        android:layout_below="@+id/edtConfirmPass"
        android:imeOptions="actionDone"
        android:layout_marginTop="@dimen/_5sdp"
        android:paddingLeft="@dimen/_5sdp"
        android:paddingRight="@dimen/_5sdp" />
</LinearLayout>

<naveed.khakhrani.miscellaneous.util.AppButton
    android:id="@+id/btnDone"
    style="@style/app_btn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_marginTop="@dimen/_10sdp"
    android:text="@string/done"
    app:btn_color="?attr/colorPrimary"

    />


</RelativeLayout>
