<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_16sdp"
    tools:context=".shared.ui.fragments.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtReferralCode"
            style="@style/edit_txt_single_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imvLogo"
            android:hint="@string/refferal_code"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingRight="@dimen/_5sdp"
            android:visibility="visible"

            />

        <EditText

            android:id="@+id/edtFullName"
            style="@style/edit_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtUserName"
            android:layout_marginTop="@dimen/_5sdp"
            android:hint="@string/full_name"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingRight="@dimen/_5sdp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edtUserName"
            style="@style/edit_txt_single_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtReferral"
            android:layout_marginTop="@dimen/_5sdp"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingRight="@dimen/_5sdp"
            android:visibility="visible" />

        <EditText
            android:id="@+id/edtUserSurName"
            style="@style/edit_txt_single_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtReferral"
            android:layout_marginTop="@dimen/_5sdp"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingRight="@dimen/_5sdp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edtEmail"
            style="@style/edit_txt_single_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtFullName"
            android:layout_marginTop="@dimen/_5sdp"

            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingRight="@dimen/_5sdp" />

        <EditText
            android:id="@+id/edtPass"
            style="@style/edit_txt_single_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtEmail"
            android:layout_marginTop="@dimen/_5sdp"

            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingRight="@dimen/_5sdp"

            />

        <EditText
            android:id="@+id/edtConfirmPass"
            style="@style/edit_txt_single_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtPass"
            android:layout_marginTop="@dimen/_5sdp"
            android:hint="@string/confirm_pass"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingRight="@dimen/_5sdp"

            />

        <!--<EditText-->
            <!--android:id="@+id/edtContact"-->
            <!--style="@style/edit_txt_single_line"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@+id/edtConfirmPass"-->
            <!--android:layout_marginTop="@dimen/_5sdp"-->
            <!--android:hint="@string/contact_num"-->
            <!--android:inputType="phone"-->
            <!--android:digits="+601"-->
            <!--android:paddingLeft="@dimen/_5sdp"-->
            <!--android:paddingRight="@dimen/_5sdp"-->

            <!--/>-->
        <com.bachors.prefixinput.EditText
            android:id="@+id/edtContact"
            style="@style/edit_txt_single_line"
            android:text="+601"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingRight="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:hint="@string/contact_num"
            android:maxLength="12"
            android:layout_below="@+id/edtConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="TextView" />

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CheckBox" />

        </LinearLayout>


    </LinearLayout>

    <naveed.khakhrani.miscellaneous.util.AppButton
        android:id="@+id/btnRegister"
        style="@style/app_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:btn_color="?attr/colorPrimary" />

</RelativeLayout>
