<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_role_path"
    android:padding="@dimen/_16sdp"
    tools:context=".shared.ui.fragments.ChooseRoleFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_15sdp"
        android:src="@drawable/logo_short"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            style="@style/field_header_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/select_role"
            android:textSize="@dimen/_18sdp" />


        <naveed.khakhrani.miscellaneous.util.AppButton
            android:id="@+id/btnCustomerRole"
            style="@style/app_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/customer"
            app:btn_color="@color/colorPrimaryCustomer" />

        <naveed.khakhrani.miscellaneous.util.AppButton
            android:id="@+id/btnAgentRole"
            style="@style/app_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/agent"
            app:btn_color="@color/colorPrimaryAgent" />


    </LinearLayout>
</RelativeLayout>
