<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".agent.ui.fragments.RefferalFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:background="@drawable/gift_box" />

    <LinearLayout
        android:id="@+id/agentView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bannerView"
        android:layout_marginBottom="@dimen/_40sdp"
        android:orientation="vertical"
        android:visibility="gone">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/share_refferal_code" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="promotion text here" />

        <TextView
            style="@style/field_header_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/refferal_code"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvReferralCode"
            style="@style/field_header_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="79849234"

            android:textSize="@dimen/_20sdp" />


        <naveed.khakhrani.miscellaneous.util.AppButton
            style="@style/app_btn"
            android:id="@+id/shareCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:text="@string/copy_to_clipboard"
            android:textColor="@android:color/white"
            app:btn_color="?attr/colorPrimary" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bannerView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Banner Here"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>
